Fix overflow for mdr box (???)

--- a/custom.css
+++ b/custom.css
@@ -1,7 +1,7 @@
 .mdr {
   color:var(--sidebar-active);
   background-color:var(--sidebar-bg);
-  border: 1px solid var(--sidebar-fg);
+//  border: 1px solid var(--sidebar-fg);
   padding: 1%;
 //  margin-right: 1%;
 //  margin-left: 1%;
